Bug 22223 - New testsuite failure on Tru64 UNIX V5.1B: gcc.c-torture/compile/20050622-1.c
Summary: New testsuite failure on Tru64 UNIX V5.1B: gcc.c-torture/compile/20050622-1.c
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.1.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: assemble-failure
Depends on:
Blocks:
 
Reported: 2005-06-28 19:57 UTC by Rainer Orth
Modified: 2006-09-13 05:25 UTC (History)
1 user (show)

See Also:
Host:
Target: alpha-dec-osf5.1b
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments
Failing assembler input (565 bytes, text/plain)
2005-06-28 19:59 UTC, Rainer Orth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Orth 2005-06-28 19:57:30 UTC
The new gcc.c-torture/compile/20050622-1.c testcase fails on Tru64 UNIX
V5.1B:

+FAIL: gcc.c-torture/compile/20050622-1.c (test for excess errors)

FAIL: gcc.c-torture/compile/20050622-1.c (test for excess errors)
Excess errors:
currfunc_frameoffset =                 75497488
currfunc_regoffset =                      -64
callstd_regoffset =     75497424
as1: Error: /tmp//cciTXuV1.s, line 1: register save offset must be less .5 megabytes

Environment:
System: OSF1 bartok V5.1 2650 alpha
Machine: alpha
	
host: alpha-dec-osf5.1b
build: alpha-dec-osf5.1b
target: alpha-dec-osf5.1b
configured with: /vol/gnu/src/gcc/gcc-dist/configure --prefix=/vol/gcc --with-local-prefix=/vol/gcc --disable-nls --host alpha-dec-osf5.1b --build alpha-dec-osf5.1b --target alpha-dec-osf5.1b --with-gmp-dir=/vol/gnu/obj/gmp-4.1.3 --with-mpfr-dir=/vol/gnu/obj/gmp-4.1.3/mpfr --enable-languages=c,c++,f95,java,objc --disable-libmudflap

How-To-Repeat:
Run make check on target platform.
Comment 1 Rainer Orth 2005-06-28 19:59:29 UTC
Created attachment 9166 [details]
Failing assembler input
Comment 2 Roger Sayle 2006-09-12 17:14:03 UTC
Subject: Bug 22223

Author: sayle
Date: Tue Sep 12 17:13:55 2006
New Revision: 116895

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=116895
Log:

	PR target/22223
	* config/alpha/alpha.c (alpha_start_function): Don't emit stack
	frame information for frames larger than 512 Kbytes on Tru64 when
	using the native assembler.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/alpha/alpha.c

Comment 3 Andrew Pinski 2006-09-13 05:25:47 UTC
Fixed.