	PR target/22223 	* config/alpha/alpha.c (alpha_start_function): Don't emit stack 	frame information for frames larger than 512 Kbytes on Tru64 when 	using the native assembler.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116895 138bc75d-0d04-0410-961f-82ee72b054a4